# azure-data-explorer-training-june-26

./: .gitignore  GLOSSARY.md  README.md
data/: README.md
data/bronze/: sec-app-logs.json  sec-web-logs.csv  sec-web-logs.ndjson
data/iot/: device-telemetry.json
day-01/: README.md  labs.md
day-02/: README.md  labs.md
day-03/: README.md  eventhub-ingest-troubleshooting-runbook.md  labs.md  policies-guide.md
day-04/: README.md  assignments.md  labs.md
day-05/: README.md  assignments.md  azure-data-factory-to-adx-guide.md  cost-optimization-guide.md  labs.md
producer/: README.md  counts.py  produce.py  utility_cyber.py
tools/: .env.example  pyproject.toml
tools/doc-sources/: adx-learn-seeds.yaml
tools/profiles/: heavy-100x.yaml  heavy-10x.yaml  lab-baseline.yaml  lab.yaml  training-2gb.yaml
tools/src/adx_training_tools/: __init__.py  __main__.py  azure_cli.py  cli.py  config.py  mcp_server.py  streaming_sender.py
tools/src/adx_training_tools/adx/: __init__.py  checkpoints.py  client.py  connectivity.py  dry_run.py  executor.py  kql_parser.py  lab_plan.py  lab_runner.py
tools/src/adx_training_tools/docs/: __init__.py  chunk.py  fetch.py  index.py  search.py  seeds.py  verify_links.py
tools/src/adx_training_tools/generators/: __init__.py  bronze.py  events.py  orchestrator.py  practice.py  profile_math.py
tools/src/adx_training_tools/publish/: __init__.py  index_docs.py  student_release.py
tools/src/adx_training_tools/sync/: lab_counts.py
tools/src/adx_training_tools/validators/: __init__.py  data_files.py  kql_inventory.py  materials.py
(+50 files in other folders)
